tests/ui/impl-trait/in-trait/trait-more-generics-than-impl.stderr
error[E0049]: associated function `bar` has 0 type parameters but its trait declaration has 1 type parameter
  --> $DIR/trait-more-generics-than-impl.rs:8:11
   |
LL |     fn bar<T>() -> impl Sized;
   |            - expected 1 type parameter
...
LL |     fn bar() -> impl Sized {}
   |           ^ found 0 type parameters

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0049`.
